kotlin-plugin/src/testFixtures/resources/testData/diagnostics/abstractClass.kt
package foo.bar

import app.softwork.serviceloader.ServiceLoader

interface Bar

<!ABSTRACT_CLASS!>@ServiceLoader(Bar::class)
abstract class BarImpl : Bar<!>
